<resources>
    <string name="app_name">LibraryManagement</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_library_app">Welcome to Library app</string>
    <string name="manage_your_library_with_ease">Manage your library with ease.</string>
    <string name="track_your_books">Track your books</string>
    <string name="keep_a_track_of_all_borrowed_books_and_due_dates">Keep a track of all borrowed books and due dates.</string>
    <string name="easy_returns">Easy returns</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="easily_manage_book_returns_and_reminders">Easily manage book returns and \nreminders.</string>
    <string name="forget_password">Forget Password?</string>
    <string name="welcome">Welcome ,</string>
    <string name="add_book">Add Book</string>
    <string name="update_book">Update Book</string>
    <string name="delete_book">Delete Book</string>
    <string name="library_no">Library No.: %1$s</string>
    <string name="admin_home">Admin Home</string>
    <string name="book_title">Book Title</string>
    <string name="category">Category</string>
    <string name="update_books">Update Books</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="not_available">Not Available</string>
    <string name="setting">Setting</string>
    <string name="total_book">Total Book</string>
    <string name="total_user">Total User</string>
    <string name="about_us">About Us</string>
    <string name="account">Account</string>
    <string name="mode">Mode</string>
    <string name="notification">Notification</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="_91">+91 %1$s</string>
    <string name="student_id">Student ID : %1$s</string>
    <string name="see_all">See All</string>
    <string name="new_arrival">New Arrival</string>
    <string name="release_date">Release Date</string>
    <string name="author_name">Author Name</string>
    <string name="description">Description</string>
    <string name="search_books_here">Search books here…</string>
    <string name="best_ever_book_of_all_time">Best Ever Book of All Time</string>
    <string name="book_details">📚 Book Details</string>
    <string name="read_more">Read More…</string>
    <string name="read_less">Read Less…</string>
    <string name="save_book">Save Book</string>
    <string name="no_save_book">No Save Book</string>
    <string name="issue_book">Issue Book</string>
    <string name="confirm">Confirm</string>
    <string name="book_shelf">Book Nook</string>
    <string name="total_issue_book">Total Issue Book</string>
    <string name="issued_by">Issued by %s</string>
    <string name="no_issue_books">No Issue Books</string>
    <string name="issue_book_request">Issue Book Request</string>
    <string name="welcome_to">Welcome to</string>
    <string name="no_book_found">No Book Found</string>
    <string name="search_here_any_books">Search here any books…</string>
    <string name="delete">Delete</string>
    <string name="users_details">Users Details</string>
    <string name="read_more_">Read More...</string>
    <string name="book_name">Book Name</string>
</resources>