<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".fragments.User.View.Others.UserSettingFragment">

    <include android:id="@+id/idAppBar"
        layout="@layout/appbar_layout"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/idLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:orientation="vertical"
        android:background="@drawable/bg_btn2"
        app:layout_constraintTop_toBottomOf="@+id/idAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/idAboutUs"
            android:layout_width="match_parent"
            android:padding="@dimen/_6sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAboutUs"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_info"
                android:layout_centerVertical="true"
                android:tint="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAboutUs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:text="@string/about_us"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_toEndOf="@+id/ivAboutUs"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/ic_right_arrow"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:tint="@color/white"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/idProfile"
            android:layout_width="match_parent"
            android:padding="@dimen/_6sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivProfile"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/user"
                android:layout_centerVertical="true"
                android:tint="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:text="@string/account"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_toEndOf="@+id/ivProfile"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/ic_right_arrow"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:tint="@color/white"/>


        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/idLinerLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:orientation="vertical"
        android:background="@drawable/bg_btn2"
        app:layout_constraintTop_toBottomOf="@+id/idLinerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/idMode"
            android:layout_width="match_parent"
            android:padding="@dimen/_6sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMode"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_mode"
                android:layout_centerVertical="true"
                android:tint="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:text="@string/mode"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_toEndOf="@+id/ivMode"/>

            <Switch
                android:id="@+id/idSwitch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/idNotification"
            android:layout_width="match_parent"
            android:padding="@dimen/_6sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivNotification"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_bell"
                android:layout_centerVertical="true"
                android:tint="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:text="@string/notification"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_toEndOf="@+id/ivNotification"/>

            <Switch
                android:id="@+id/idSwitch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:orientation="vertical"
        android:background="@drawable/bg_btn2"
        app:layout_constraintTop_toBottomOf="@+id/idLinerLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:id="@+id/idLogout"
            android:layout_width="match_parent"
            android:padding="@dimen/_6sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLogout"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_logout"
                android:layout_centerVertical="true"
                android:tint="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:text="@string/log_out"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_toEndOf="@+id/ivLogout"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/ic_right_arrow"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:tint="@color/white"/>

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Version"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>